Small changes to calendar module: browsing next/previous months now works with the new hash based navigation. also decreased the contents width and moved them to the center for better positioning/readability. also fixed small css issues related to tablisting. Script for extension API communication is now ready and commented. Next up: jot down on paper what features to add/when and what to ask the user when he wants to do something.

--- a/src/styles/tabeon/style.css
+++ b/src/styles/tabeon/style.css
@@ -341,6 +341,7 @@ div.container-fluid > .row > div[class^="col-"] {
 .active-tabs-module .list-item-options {
     float: right;
     list-style-type: none;
+    padding-left: 0rem;
 }
 
     .active-tabs-module .list-item-options > li {
